--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ rvm:
   - 2.0.0
   - 2.1.0
 script:
-  - bundle exec rake test
+  - bundle exec foodcritic --epic-fail any ./
+  - bundle exec kitchen test --parallel --log-level=info --destroy=always
