--- a/test/support/Gemfile
+++ b/test/support/Gemfile
@@ -14,3 +14,4 @@ gem "kitchen-vagrant", "~> 0.14.0"
 gem "rake"
 gem "serverspec", "~> 1.0.0"
 gem "test-kitchen", "~> 1.2.1"
+gem "rubocop", "~> 0.18.1"
