--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,7 @@ vendor/bundle
 build/*
 tmp/
 Berksfile.lock
-test/support/Gemfile.lock
-test/support/chef-10.gemfile.lock
-test/support/chef-11.gemfile.lock
+Gemfile.lock
 .coverage
 .kitchen/
 .kitchen.local.yml
