add support for minitest-handler verification

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -26,6 +26,7 @@ suites:
       - recipe[postgresql::doc]
       - recipe[postgresql::libpq]
       - recipe[postgresql::server_dev]
+      - recipe[minitest-handler]
     attributes:
       postgresql:
         users:
