update CI configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,12 @@ bundler_args: --without integration
 rvm:
 - 1.9.3
 - 2.0.0
-- 2.1.1
+- 2.1.2
 script:
-- bundle exec rake knife
 - bundle exec rake rubocop
 - bundle exec rake foodcritic
 - bundle exec rake chefspec
-- bundle exec rake kitchen
+- bundle exec rake kitchen:all
 env:
   matrix:
   - CHEF_VERSION: "10.30"
