replace `pg_database_extensions` with LWRPs:
* add `postgresql_extension` LWRP
* add `postgresql_language` LWRP
* update `pg_database` recipe
* add spec coverage
* add ChefSpec matchers

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -45,3 +45,5 @@ suites:
               - hstore
               - dblink
               - uuid-ossp
+            languages:
+              - plpgsql
