--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,5 +1,6 @@
 driver:
   require_chef_omnibus: <%= ENV.fetch("CHEF_VERSION", "latest") %>
+  provider: <%= ENV.fetch("CHEF_PROVIDER", "virtualbox") %>
   ssh_key: <%= File.expand_path("./test/support/keys/vagrant") %>
   name: vagrant
 
