--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -19,8 +19,10 @@ platforms:
 
 
 suites:
-  - name: server
+  <% %w[9.3 9.4].each do |version| %>
+  - name: server_<%= version.tr(".", "") %>
     run_list:
+      - recipe[apt]
       - recipe[postgresql::server]
       - recipe[postgresql::client]
       - recipe[postgresql::contrib]
@@ -31,6 +33,7 @@ suites:
       - recipe[minitest-handler]
     attributes:
       postgresql:
+        version: <%= version %>
         users:
           - username: testuser
             password: s3kr1t
@@ -48,3 +51,4 @@ suites:
               - uuid-ossp
             languages:
               - plpgsql
+  <% end %>
