update `language` provider:
* add support for languages which require additional
  package installation
* add support for languages which have alternate
  control file names
* official support for the following:
  - plperl
  - plpython
  - plpython3
  - pltcl
  - plv8

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -25,7 +25,6 @@ suites:
       - recipe[apt]
       - recipe[postgresql::server]
       - recipe[postgresql::client]
-      - recipe[postgresql::contrib]
       - recipe[postgresql::dbg]
       - recipe[postgresql::doc]
       - recipe[postgresql::libpq]
@@ -47,8 +46,20 @@ suites:
             # postgis: true
             extensions:
               - hstore
-              - dblink
-              - uuid-ossp
+              - pgcrypto
             languages:
               - plpgsql
+              - plperl
+              - plpython3
+              - pltcl
+        extensions:
+          - name: dblink
+            database: testdb
+          - name: uuid-ossp
+            database: testdb
+        languages:
+          - name: plpython
+            database: testdb
+          - name: plv8
+            database: testdb
   <% end %>
