--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ sudo: false
 before_script:
 - "gem install bundler-audit --no-rdoc --no-ri && bundle-audit update"
 script:
-- bundle-audit
+- bundle-audit check --ignore OSVDB-117461
 - bundle exec rake license_finder
 - bundle exec rake rubocop
 - bundle exec rake foodcritic
